--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Oh snap this works</h1>
+    <h1>Oh snap this works better</h1>
 
  <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">get the time</button>
  <button type="button" onclick="document.getElementById('demo').style.fontSize = '24px'"> Large</button>
