--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <script type="text/javascript" src="toast.js"></script>
     <script type="text/javascript" src="jscript.js"></script>
+
 </head>
 <body>
     <h1>Oh snap this works better and in JS</h1>
@@ -18,6 +20,7 @@
     smallTextButton();
     normalTextButton();
     largeTextButton();
+    toastTextButton();
     </script>
 
  <h2>***</h2>
