--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <script type="text/javascript" src="toast.js"></script>
     <script type="text/javascript" src="jscript.js"></script>
+    <script type="text/javascript" src="browsercheck.js"></script>
 
 </head>
 <body>
@@ -23,7 +24,10 @@
         uniButton();
         webToastButton("Hello There!", "[Sample Body Text]","", "https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&h=350");
         appToastButton();
+        logcheck()
     </script>
+
+
 
  <h2>*** *</h2>
 </body>
