--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <script>
         timeButton();
-        uniButton();
-        webToastButton("Hello There!", "[Sample Body Text]","", "https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&h=350");
+        
+        // webToastButton("Hello There!", "[Sample Body Text]","", "https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&h=350");
         appToastButton();
         logcheck()
     </script>
